--- a/Source/Enter.UI/Components/AppBar/EntAppBar.razor
+++ b/Source/Enter.UI/Components/AppBar/EntAppBar.razor
@@ -1,5 +1,5 @@
-﻿@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Components.Icon
+﻿@using Enter.UI.Components.Button
+@using Enter.UI.Components.Icon
 @inherits EntComponentBase
 @namespace Enter.UI.Components
 <div @attributes="@AdditionalAttributes" class="@cssClass">
