--- a/Source/Enter.UI/Components/Buttons/EntButton.razor
+++ b/Source/Enter.UI/Components/Buttons/EntButton.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Components.Icon
+@using Enter.UI.Components.Button
+@using Enter.UI.Components.Icon
 @inherits EntComponentBase
 
 <button @attributes="@AdditionalAttributes" disabled="@(Disabled ? true : false)" class="@RootClass">
