--- a/Source/Enter.UI/Components/Drawer/EntDrawer.razor
+++ b/Source/Enter.UI/Components/Drawer/EntDrawer.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Components.Drawer
+@using Enter.UI.Components.Drawer
 @using System.Data.Common
 @inherits EntComponentBase
 
