--- a/Source/Enter.UI/Components/Expanable/EntExpandable.razor
+++ b/Source/Enter.UI/Components/Expanable/EntExpandable.razor
@@ -1,8 +1,8 @@
 ﻿@namespace Enter.UI.Components
 @using Microsoft.JSInterop;
-@using Enter.UI.Abstractions.Components.Animator
-@using Enter.UI.Abstractions.Components.Expandable
-@using Enter.UI.Abstractions.JsServices
+@using Enter.UI.Components.Animator
+@using Enter.UI.Components.Expandable
+@using Enter.UI.JsServices
 @inherits EntComponentBase
 
 <EntAnimator
