--- a/Source/Enter.UI/Components/Inputs/EntInputText.razor
+++ b/Source/Enter.UI/Components/Inputs/EntInputText.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.Components.Inputs
+@using Enter.UI.Components.Icon
+@using Enter.UI.Components.Inputs
 @inherits EntInputBase<string?>
 @implements IAsyncDisposable
 
