--- a/Source/Enter.UI/Components/Loading/EntLinearLoading.razor
+++ b/Source/Enter.UI/Components/Loading/EntLinearLoading.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.Components.Loading
+@using Enter.UI.Components.Button
+@using Enter.UI.Components.Icon
+@using Enter.UI.Components.Loading
 @inherits EntComponentBase
 <span @attributes="@AdditionalAttributes" class="@RootClass" style="@RootStyle">
      @if (Indeterminate)
