--- a/Source/Enter.UI/Components/Modal/EntMessageBox.razor
+++ b/Source/Enter.UI/Components/Modal/EntMessageBox.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Components.Modal
-@using Enter.UI.Abstractions.Components.Text
-@using Enter.UI.Abstractions.Components.Button
+@using Enter.UI.Components.Modal
+@using Enter.UI.Components.Text
+@using Enter.UI.Components.Button
 @inherits EntComponentBase
 @implements IDisposable
  <div class="@RootCss" >
