--- a/Source/Enter.UI/Components/Modal/EntModal.razor
+++ b/Source/Enter.UI/Components/Modal/EntModal.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Components.Modal
-@using Enter.UI.Abstractions.Components.Icon
+@using Enter.UI.Components.Modal
+@using Enter.UI.Components.Icon
 @inherits EntComponentBase
 <CascadingValue Value="this" IsFixed="true">
     <div class="ent-modal-container" @onclick="OnContainerClick">
