--- a/Source/Enter.UI/Components/Modal/EntModalProvider.razor
+++ b/Source/Enter.UI/Components/Modal/EntModalProvider.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Services
-@using Enter.UI.Abstractions.Components.Modal
+@using Enter.UI.Services
+@using Enter.UI.Components.Modal
 @implements IDisposable
 <div class="ent-modal-provider ">
     <CascadingValue Value="this" IsFixed="true">
