--- a/Source/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
+++ b/Source/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Components.Icon
+@using Enter.UI.Components.Icon
 @inherits EntComponentBase
 <div @attributes="AdditionalAttributes" class="@RootCss" >
     <div class="ent-nav-menu-group-item" @onclick="@ToggleItem">
