--- a/Source/Enter.UI/Components/Popover/EntPopover.razor
+++ b/Source/Enter.UI/Components/Popover/EntPopover.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Services
+@using Enter.UI.Services
 @inherits EntComponentBase
 
 <div  @attributes="AdditionalAttributes" class="@RootClass" id="@($"ent-popover-{_id}")">
