--- a/Source/Enter.UI/Components/Popover/EntPopoverProvider.razor
+++ b/Source/Enter.UI/Components/Popover/EntPopoverProvider.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @inherits EntComponentBase
-@using Enter.UI.Abstractions.Services
+@using Enter.UI.Services
 <div class="@RootClass">
     @foreach (var item in _entPopoverService.PopoverInstances)
     {
