--- a/Source/Enter.UI/Components/Shimmer/EntShimmer.razor
+++ b/Source/Enter.UI/Components/Shimmer/EntShimmer.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Components.Shimmer
+@using Enter.UI.Components.Shimmer
 @inherits EntComponentBase
 <span @attributes="@AdditionalAttributes" class="@RootClass" style="@RootStyle">
 </span>
