--- a/Source/Enter.UI/Components/Tabs/EntMdiTab.razor
+++ b/Source/Enter.UI/Components/Tabs/EntMdiTab.razor
@@ -4,6 +4,7 @@
         @attributes="@AdditionalAttributes"
         class="@RootCss"
         ItemClass="@ItemClass"
+        Responsive="@Responsive"
         Direction="@Direction"
         ItemDirection="@ItemDirection"
         Expandable="@Expandable"
