--- a/Source/Enter.UI/Components/Text/EntText.razor
+++ b/Source/Enter.UI/Components/Text/EntText.razor
@@ -1,6 +1,6 @@
 @namespace Enter.UI.Components
 
-@using Enter.UI.Abstractions.Components.Text
+@using Enter.UI.Components.Text
 @inherits EntComponentBase
 
 @switch (Type)
