--- a/Source/Enter.UI/Components/Theme/EntThemeProvider.razor
+++ b/Source/Enter.UI/Components/Theme/EntThemeProvider.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.JSInterop
-@using Enter.UI.Abstractions.JsServices
+@using Enter.UI.JsServices
 @namespace Enter.UI.Components
 @inherits EntComponentBase
 
