--- a/Source/Enter.UI/Components/TreeView/EntTreeView.razor
+++ b/Source/Enter.UI/Components/TreeView/EntTreeView.razor
@@ -1,8 +1,8 @@
 ﻿@namespace Enter.UI.Components
 
 @typeparam TValue
-@using Enter.UI.Abstractions.Components.TreeView
-@using Enter.UI.Abstractions.Core
+@using Enter.UI.Components.TreeView
+@using Enter.UI.Core
 @inherits EntComponentBase  
 
 <CascadingValue Value="this" IsFixed="true">
