--- a/Source/Enter.UI/Components/UploadBox/EntUploadBox.razor
+++ b/Source/Enter.UI/Components/UploadBox/EntUploadBox.razor
@@ -1,10 +1,10 @@
 ﻿@namespace Enter.UI.Components
 @using Microsoft.JSInterop;
-@using Enter.UI.Abstractions.Components.Animator
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Components.Expandable
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.JsServices
+@using Enter.UI.Components.Animator
+@using Enter.UI.Components.Button
+@using Enter.UI.Components.Expandable
+@using Enter.UI.Components.Icon
+@using Enter.UI.JsServices
 @inherits EntComponentBase
 
 <div
