--- a/Source/Enter.UI/Components/Utilities/Flex/EntFlex.razor
+++ b/Source/Enter.UI/Components/Utilities/Flex/EntFlex.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 <div class="@RootCss">@ChildContent</div>
-@using Enter.UI.Abstractions.Components.Flex
+@using Enter.UI.Components.Flex
 @inherits EntComponentBase
 @code {
     private readonly string _flexRow = "flex-row";
