--- a/example/Enter.Dashboard/Pages/Documents/DataTablePage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/DataTablePage.razor
@@ -1,11 +1,11 @@
 ﻿@page "/documents/datatable"
-@using Enter.UI.Abstractions.Components.TreeView
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Core.Bases;
-@using Enter.UI.Abstractions.Core.Extensions
+@using Enter.UI.Components.TreeView
+@using Enter.UI.Components.Button
+@using Enter.UI.Core.Bases;
+@using Enter.UI.Core.Extensions
 @using System.Net.Mime
 @using Enter.Dashboard.Model
-@using Enter.UI.Abstractions.Core
+@using Enter.UI.Core
 @inherits EntPageBase
 @layout DocumentLayout
 <EntCard class="m-4" Title="جدول داده">
