--- a/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
+++ b/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
@@ -1,9 +1,9 @@
 @page "/documents/form"
 @using System.ComponentModel.DataAnnotations
 @using Enter.Dashboard.Model;
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.Components.Inputs
+@using Enter.UI.Components.Button
+@using Enter.UI.Components.Icon
+@using Enter.UI.Components.Inputs
 @using Enter.UI.Core
 <div class="">
     <EntToolbar class="my-4">
