--- a/example/Enter.Dashboard/Pages/Documents/LoadingLayout.razor
+++ b/example/Enter.Dashboard/Pages/Documents/LoadingLayout.razor
@@ -1,6 +1,6 @@
 @page "/documents/loading"
-@using Enter.UI.Abstractions.Components.Flex
-@using Enter.UI.Abstractions.Components.Loading
+@using Enter.UI.Components.Flex
+@using Enter.UI.Components.Loading
 
 <div class="p-8">
     <EntCard Title="Loading" Expandable="true" class="mb-4">
