--- a/example/Enter.Dashboard/Pages/Documents/ModalPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/ModalPage.razor
@@ -1,12 +1,12 @@
 ﻿@page "/documents/modals"
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Components.Flex
-@using Enter.UI.Abstractions.Components.Icon
+@using Enter.UI.Components.Button
+@using Enter.UI.Components.Flex
+@using Enter.UI.Components.Icon
 @using Enter.Dashboard.Model
-@using Enter.UI.Abstractions.Components.Modal
+@using Enter.UI.Components.Modal
 @using Enter.UI.Core
 @using System.Diagnostics.Metrics
-@inherits Enter.UI.Abstractions.Core.Bases.EntPageBase
+@inherits Enter.UI.Core.Bases.EntPageBase
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Expandable="true"  Title="Modals">
