--- a/example/Enter.Dashboard/Pages/Documents/PaginationPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/PaginationPage.razor
@@ -1,10 +1,10 @@
 ﻿@page "/documents/pagination"
-@using Enter.UI.Abstractions.Components.TreeView
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Core.Extensions
+@using Enter.UI.Components.TreeView
+@using Enter.UI.Components.Button
+@using Enter.UI.Core.Extensions
 @using System.Net.Mime
 @using Enter.Dashboard.Model
-@using Enter.UI.Abstractions.Core
+@using Enter.UI.Core
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Expandable="true" CardExpand="false" class="mb-4" Title="Pagination">
