--- a/example/Enter.Dashboard/Pages/Documents/ShimmerLayout.razor
+++ b/example/Enter.Dashboard/Pages/Documents/ShimmerLayout.razor
@@ -1,6 +1,6 @@
 @page "/documents/shimmer"
-@using Enter.UI.Abstractions.Components.Flex
-@using Enter.UI.Abstractions.Components.Shimmer
+@using Enter.UI.Components.Flex
+@using Enter.UI.Components.Shimmer
 
 <div class="p-8">
     <EntCard Title="Shimmer" Expandable="true" class="mb-4">
