--- a/example/Enter.Dashboard/Pages/Documents/UploadBoxPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/UploadBoxPage.razor
@@ -1,9 +1,9 @@
 ﻿@page "/documents/upload-box"
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Components.Flex
-@using Enter.UI.Abstractions.Components.Icon
+@using Enter.UI.Components.Button
+@using Enter.UI.Components.Flex
+@using Enter.UI.Components.Icon
 @using Enter.Dashboard.Model
-@inherits Enter.UI.Abstractions.Core.Bases.EntPageBase
+@inherits Enter.UI.Core.Bases.EntPageBase
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Title="UploadBox" class="mb-4">
