--- a/example/Enter.Dashboard/Shared/MainLayout.razor
+++ b/example/Enter.Dashboard/Shared/MainLayout.razor
@@ -1,8 +1,8 @@
-﻿@using Enter.UI.Abstractions.Components.Drawer
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.Core.Enums
-@using Enter.UI.Abstractions.Services
-@using Enter.UI.Abstractions.Components.Button
+﻿@using Enter.UI.Components.Drawer
+@using Enter.UI.Components.Icon
+@using Enter.UI.Core.Enums
+@using Enter.UI.Services
+@using Enter.UI.Components.Button
 @using Enter.Dashboard.Components
 @inherits LayoutComponentBase
 <div class="border-y d-flex flex-column">
