--- a/Source/Enter.UI/Components/Card/EntCard.razor
+++ b/Source/Enter.UI/Components/Card/EntCard.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Core
-@using Enter.UI.Abstractions.Components.Icon
+@using Enter.UI.Components.Icon
 @inherits EntComponentBase
 
 <div @attributes="@AdditionalAttributes" class="@RootClass" >
