--- a/Source/Enter.UI/Components/Icon/EntIcon.razor
+++ b/Source/Enter.UI/Components/Icon/EntIcon.razor
@@ -1,4 +1,4 @@
-﻿@using Enter.UI.Abstractions.Components.Icon
+﻿@using Enter.UI.Components.Icon
 @inherits EntComponentBase
 @namespace Enter.UI.Components
 
