--- a/Source/Enter.UI/Components/Inputs/EntInputAutoComplete.razor
+++ b/Source/Enter.UI/Components/Inputs/EntInputAutoComplete.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
-@using Enter.UI.Abstractions.Components.Icon
+@using Enter.UI.Components.Icon
 @inherits EntInputBase<string>
 @typeparam T
 <div @attributes="@AdditionalAttributes" class="@RootClass"  @ref="_elementReference" id="@Id">
