--- a/Source/Enter.UI/Components/NavMenu/EntNavMenuTitle.razor
+++ b/Source/Enter.UI/Components/NavMenu/EntNavMenuTitle.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Components.Text
+@using Enter.UI.Components.Text
 @inherits EntComponentBase
 
 <EntText Type="EntTextType.Bold" Size="EntTextSize.Subtitle">
