--- a/Source/Enter.UI/Components/Pagination/EntPagination.razor
+++ b/Source/Enter.UI/Components/Pagination/EntPagination.razor
@@ -1,6 +1,6 @@
 @namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
-@using Enter.UI.Abstractions.Components.Icon
+@using Enter.UI.Components.Icon
 @inherits EntComponentBase
 
 
