--- a/Source/Enter.UI/Components/Toast/EntToastProvider.razor
+++ b/Source/Enter.UI/Components/Toast/EntToastProvider.razor
@@ -1,11 +1,11 @@
 ﻿@namespace Enter.UI.Components
 @inherits EntComponentBase
-@using Enter.UI.Abstractions.Components.Toast
-@using Enter.UI.Abstractions.Core
-@using Enter.UI.Abstractions.Services
-@using Enter.UI.Abstractions.Components.Animator
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.Components.Text
+@using Enter.UI.Components.Toast
+@using Enter.UI.Core
+@using Enter.UI.Services
+@using Enter.UI.Components.Animator
+@using Enter.UI.Components.Icon
+@using Enter.UI.Components.Text
 
 <div class="@RootClass">
     <EntSpace SpaceY="2">
