--- a/Source/Enter.UI/Components/Toolbar/EntToolbarButton.razor
+++ b/Source/Enter.UI/Components/Toolbar/EntToolbarButton.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.Components.Text
+@using Enter.UI.Components.Icon
+@using Enter.UI.Components.Text
 @inherits EntComponentBase
 <CascadingValue Value="@(this)">
     <div @attributes="AdditionalAttributes" class="@RootClass">
