--- a/example/Enter.Dashboard/Pages/Documents/ButtonPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/ButtonPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/documents/buttons"
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Components.Flex
-@inherits Enter.UI.Abstractions.Core.Bases.EntPageBase
+@using Enter.UI.Components.Button
+@using Enter.UI.Components.Flex
+@using Enter.UI.Components.Icon
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Title="Default Buttons" class="mb-4">
