--- a/example/Enter.Dashboard/Pages/Documents/IconPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/IconPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/documents/icons"
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Components.Icon
-@inherits Enter.UI.Abstractions.Core.Bases.EntPageBase
+@using Enter.UI.Components.Button
+@using Enter.UI.Components.Icon
+@inherits Enter.UI.Core.Bases.EntPageBase
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Title="Default Icons" class="mb-4">
