--- a/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
@@ -1,11 +1,11 @@
 ﻿@page "/documents/treeview"
-@using Enter.UI.Abstractions.Components.TreeView
-@using Enter.UI.Abstractions.Components.Button
-@using Enter.UI.Abstractions.Core.Extensions
+@using Enter.UI.Components.TreeView
+@using Enter.UI.Components.Button
+@using Enter.UI.Core.Extensions
 @using System.Net.Mime
 @using Enter.Dashboard.Model
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.Core
+@using Enter.UI.Components.Icon
+@using Enter.UI.Core
 @layout DocumentLayout
 <div class="p-4">
 
