--- a/example/Enter.Dashboard/Pages/Index.razor
+++ b/example/Enter.Dashboard/Pages/Index.razor
@@ -1,14 +1,14 @@
 ﻿@page "/"
 @using Enter.Dashboard.Model
-@using Enter.UI.Abstractions.Services
+@using Enter.UI.Services
 @using Enter.UI.Core
-@using Enter.UI.Abstractions.Components.Modal
-@using Enter.UI.Abstractions.Components.Toast
-@using Enter.UI.Abstractions.Components.Flex
-@using Enter.UI.Abstractions.Components.Icon
-@using Enter.UI.Abstractions.Components.Drawer
-@using Enter.UI.Abstractions.Components.Loading
-@using Enter.UI.Abstractions.Components.Shimmer
+@using Enter.UI.Components.Modal
+@using Enter.UI.Components.Toast
+@using Enter.UI.Components.Flex
+@using Enter.UI.Components.Icon
+@using Enter.UI.Components.Drawer
+@using Enter.UI.Components.Loading
+@using Enter.UI.Components.Shimmer
 @layout DocumentLayout
 
 <PageTitle>Index</PageTitle>
